--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\cslisp\Lisp.csproj" />
+    <ProjectReference Include="..\Lisp\Lisp.csproj" />
   </ItemGroup>
 
 </Project>
