testが動くところまで

--- a/Lisp/Properties/launchSettings.json
+++ b/Lisp/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "cslisp": {
-      "commandName": "Project",
-      "commandLineArgs": "-e \"(+ 1 2)\""
+      "commandName": "Project"
     }
   }
 }
