--- a/Main/Properties/launchSettings.json
+++ b/Main/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Main": {
       "commandName": "Project",
-      "commandLineArgs": "-v macrotest.scm",
+      "commandLineArgs": "test.scm",
       "workingDirectory": "C:\\Work\\cslisp"
     }
   }
