Try implement syntactic closure.

--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;DONT_CATCH_ERROR</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Lisp\Lisp.csproj" />
   </ItemGroup>
